# Blaze

./: .gitignore  CMakeLists.txt  Cmakelists.txt  Doxyfile  Material1D.hpp  QuickCMakeLists.txt  README.md  Steel1D.hpp  aliases.sh  blaze_config.hpp.in  build.sh  run.sh  sample_code.md  size.sh  test_blaze.sh  update.sh
POC/: bhatti_isotropic.ipynb  bhatti_kinematic.ipynb  element_contribution_count.ipynb  frame.ipynb  frame.py  mesh_decomposition.ipynb  mesh_decomposition_2.ipynb  mesh_distribution.xlsx
doc/html/: _beam_column_fiber_section_8hpp.html  _beam_column_fiber_section_8hpp_source.html  _beam_element2_d_template_8hpp.html  _beam_element2_d_template_8hpp_source.html  _beam_element_base_class_8cpp.html  _beam_element_base_class_8hpp.html  _beam_element_base_class_8hpp_source.html  _beam_element_common_interface_8cpp.html  _beam_element_common_interface_8hpp.html  _beam_element_common_interface_8hpp_source.html  _elastic_plastic_material_8hpp.html  _elastic_plastic_material_8hpp_source.html  _element_base_class_8hpp.html  _element_base_class_8hpp_source.html  _element_configuration_8cpp.html  _element_configuration_8hpp.html  _element_configuration_8hpp_source.html  _element_types_8hpp_source.html  _execution_timer_8hpp.html  _execution_timer_8hpp_source.html  _frame_mesh_8hpp.html  _frame_mesh_8hpp_source.html  _izzuddin2_d_nonlinear_beam_8cpp.html  _izzuddin2_d_nonlinear_beam_8hpp.html  _izzuddin2_d_nonlinear_beam_8hpp_source.html  _linear2_d_beam_element_8cpp.html  _linear2_d_beam_element_8hpp.html  _linear2_d_beam_element_8hpp_source.html  _load_manager_8hpp.html  _load_manager_8hpp_source.html  _local_axes_8hpp.html  _local_axes_8hpp_source.html  _m_p_i_wrappers_8hpp.html  _m_p_i_wrappers_8hpp_source.html  _material1_d_8hpp.html  _material1_d_8hpp_source.html  _material_fibre_8hpp.html  _material_fibre_8hpp_source.html  _model_8hpp.html  _model_8hpp_source.html  (+213 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+60 more)
notes/: Blaze_libraries.md  ideation.md  journal.md  notes.md  solution_procedure.md  transform.md
perf/: auto.slurm  run.bash
source/: .gitignore  BeamColumnFiberSection.hpp  BeamElement2DTemplate.hpp  BeamElementBaseClass.hpp  BeamElementCommonInterface.cpp  BeamElementCommonInterface.hpp  CMakeLists.txt  ElasticPlasticMaterial.cpp  ElasticPlasticMaterial.hpp  ElementBaseClass.hpp  ElementConfiguration.cpp  ElementConfiguration.hpp  Izzuddin2DNonlinearBeam.cpp  Izzuddin2DNonlinearBeam.hpp  Linear2DBeamElement.cpp  Linear2DBeamElement.hpp  LoadManager.hpp  LocalAxes.hpp  Makefile  Material1D.cpp  Material1D.hpp  MaterialFibre.hpp  Model.hpp  NodalLoad.hpp  NodalRestraint.hpp  Nonlinear2DBeamElement.cpp  Nonlinear2DBeamElement.hpp  Nonlinear2DPlasticBeamElement.cpp  Nonlinear2DPlasticBeamElement.hpp  NonlinearTransform.hpp  Record.cpp  Record.hpp  Scribe.hpp  SectionBaseClass.cpp  SectionBaseClass.hpp  SolutionProcedure.cpp  SolutionProcedure.hpp  assembler.cpp  assembler.hpp  basic_orientation.cpp  (+24 more)
source/aggregators/: CMakeLists.txt  FrameMesh.hpp  assembler.hpp  global_mesh.hpp
source/core/: CMakeLists.txt  MPIWrappers.hpp  basic_utilities.cpp  basic_utilities.hpp  node.cpp  node.hpp  tpetra_wrappers.hpp
source/elements/: CMakeLists.txt  Linear2DBeamElement.hpp  Nonlinear2DBeamElement.hpp  Nonlinear2DPlasticBeamElement.hpp
source/elements/interface/: BeamElementBaseClass.cpp  BeamElementBaseClass.hpp  BeamElementCommonInterface.hpp  ElementBaseClass.hpp  ElementTypes.hpp
source/elements/orientation/: NonlinearTransform.cpp  NonlinearTransform.hpp
source/managers/: CMakeLists.txt
source/managers/boundary_conditions/: NodalRestraint.cpp  NodalRestraint.hpp  RestraintManager.hpp
source/managers/history/: Record.hpp  Scribe.cpp  Scribe.hpp
source/managers/loads/: LoadManager.cpp  LoadManager.hpp  NodalLoad.cpp  NodalLoad.hpp
source/managers/performance_analysis/: ExecutionTimer.cpp  ExecutionTimer.hpp  TimeKeeper.cpp  TimeKeeper.hpp
source/materials/: CMakeLists.txt  ElasticPlasticMaterial.hpp
source/materials/sections/: BeamColumnFiberSection.cpp  BeamColumnFiberSection.hpp  MaterialFibre.cpp  MaterialFibre.hpp  SectionBaseClass.hpp  SectionTypes.hpp  basic_section.hpp
source/mesh/: Makefile  global_mesh.cpp  global_mesh.hpp  mesh  mesh.cpp  mesh.hpp  mesh_analysis.cpp  test.msh  test_10elem.msh
source/solution/: CMakeLists.txt  SolutionProcedure.hpp  basic_solver.cpp  basic_solver.hpp
source/tests/: BeamElementTests.hpp  DistributedAssemblyTests_MPI.hpp  DistributedManagersTests_MPI.hpp  DistributedMeshTests.hpp  DistributedMeshTests_MPI.hpp  DistributedTestsBlaze.cpp  DistributedTestsBlazeMPI.cpp  ElasticPlasticMaterialTests.hpp  ElasticVerificationTests.hpp  FibreSectionTests.hpp  Makefile  ModelTests.hpp  NodalLoadTests.hpp  PlasticBeamElementTests.hpp  PlasticModelTests.hpp  PlasticVerificationTests.hpp  ScribeTest.hpp  TPetraTests.hpp  TestHelpers.hpp  TimeKeeperTests_MPI.hpp  UnitTestsBlazeSerial.cpp  VerificationCases.cpp  my_test.cpp  tests_mpi.cpp
tutorials/01/Begin/: Makefile  exercise_1_begin.cpp
tutorials/01/Solution/: Makefile
