add_library(BlazeModel INTERFACE "model.cpp")
add_subdirectory(core)
add_subdirectory(materials)
add_subdirectory(elements)
add_subdirectory(aggregators)
add_subdirectory(managers)
add_subdirectory(solution)
target_include_directories(BlazeLib ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(BlazeLib BlazeCore BlazeMaterials BlazeElements BlazeAggregators BlazeManagers BlazeSolution)