add_library(BlazeModel STATIC "model.cpp")
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(core)
add_subdirectory(materials)
add_subdirectory(elements)
add_subdirectory(aggregators)
add_subdirectory(managers)
add_subdirectory(solution)
target_include_directories(BlazeModel PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(BlazeModel BlazeCore BlazeMaterials BlazeElements BlazeAggregators BlazeManagers BlazeSolution)