if(BUILD_STATIC_LIBS)
add_library(BlazeModel STATIC "Model.cpp")
else(BUILD_STATIC_LIBS)
add_library(BlazeModel INTERFACE)
endif(BUILD_STATIC_LIBS)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(core)
add_subdirectory(materials)
add_subdirectory(elements)
add_subdirectory(aggregators)
add_subdirectory(managers)
add_subdirectory(solution)

if(BUILD_STATIC_LIBS)
    message("building static libraries model!")
    target_include_directories(BlazeModel PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(BlazeModel BlazeCore BlazeMaterials BlazeElements BlazeAggregators BlazeManagers BlazeSolution)
else(BUILD_STATIC_LIBS)
    target_include_directories(BlazeModel INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(BlazeModel INTERFACE BlazeCore BlazeMaterials BlazeElements BlazeAggregators BlazeManagers BlazeSolution)
endif(BUILD_STATIC_LIBS)
