if(BUILD_STATIC_LIBS)
    file(GLOB AGGREGATORS_SRC "*.cpp")
    add_library(BlazeAggregators STATIC ${AGGREGATORS_SRC})
    target_include_directories(BlazeAggregators PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(BlazeAggregators BlazeCore BlazeMaterials BlazeElements)
else(BUILD_STATIC_LIBS)
    add_library(BlazeAggregators INTERFACE)
    target_include_directories(BlazeAggregators INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(BlazeAggregators INTERFACE BlazeCore BlazeMaterials BlazeElements)
endif(BUILD_STATIC_LIBS)
