if(BUILD_STATIC_LIBS)
    file(GLOB AGGREGATORS_SRC "*.cpp")
    add_library(BlazeAggregators STATIC ${AGGREGATORS_SRC})
    target_include_directories(BlazeAggregators PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    if(KOKKOS)
        target_compile_definitions(BlazeAggregators PRIVATE KOKKOS)
        target_link_libraries(BlazeAggregators BlazeCore BlazeMaterials BlazeElements Kokkos::kokkos)
    else(KOKKOS)
        target_link_libraries(BlazeAggregators BlazeCore BlazeMaterials BlazeElements)
    endif(KOKKOS)
else(BUILD_STATIC_LIBS)
    add_library(BlazeAggregators INTERFACE)
        target_include_directories(BlazeAggregators INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
    if(KOKKOS)
        target_compile_definitions(BlazeAggregators INTERFACE KOKKOS)
        target_link_libraries(BlazeAggregators INTERFACE BlazeCore BlazeMaterials BlazeElements Kokkos::kokkos)
    else(KOKKOS)
        target_link_libraries(BlazeAggregators INTERFACE BlazeCore BlazeMaterials BlazeElements)
    endif(KOKKOS)
endif(BUILD_STATIC_LIBS)
if(WITH_MPI)
    find_package(MPI REQUIRED)
    list(APPEND CMAKE_PREFIX_PATH "/Users/anwar/UOE/dissertation/code/Trilinos/trilinos-install")
    find_package(Trilinos REQUIRED)
    target_include_directories(BlazeAggregators INTERFACE ${MPI_INCLUDE_PATH} ${Trilinos_INCLUDE_DIRS})
    target_compile_definitions(BlazeAggregators INTERFACE WITH_MPI)
    target_link_libraries(BlazeAggregators INTERFACE MPI::MPI_CXX ${Trilinos_LIBRARIES})
endif()
