find_package(Eigen3 REQUIRED)
if(BUILD_STATIC_LIBS)
    file(GLOB CORE_SRC "*.cpp")
    target_include_directories(BlazeCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(BlazeCore Eigen3::Eigen)
add_library(BlazeCore STATIC ${CORE_SRC})
else(BUILD_STATIC_LIBS)
    add_library(BlazeCore INTERFACE)
    target_include_directories(BlazeCore INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(BlazeCore INTERFACE Eigen3::Eigen)
endif(BUILD_STATIC_LIBS)
