if(BUILD_STATIC_LIBS)
file(GLOB SOLUTION_SRC "*.cpp")
    add_library(BlazeSolution STATIC ${SOLUTION_SRC})
    target_include_directories(BlazeSolution PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(BlazeSolution BlazeCore BlazeMaterials BlazeElements BlazeAggregators BlazeManagers)
else(BUILD_STATIC_LIBS)
    add_library(BlazeSolution INTERFACE)
    target_include_directories(BlazeSolution INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(BlazeSolution INTERFACE BlazeCore BlazeMaterials BlazeElements BlazeAggregators BlazeManagers)
endif(BUILD_STATIC_LIBS)
